Fix some